--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "svg-parser": "^2.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
