--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "antd": "^5.5.1",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.12.14",
     "react": "^18.2.0",
