--- a/package.json
+++ b/package.json
@@ -12,21 +12,30 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.32",
+    "@types/nodemailer": "^6.4.8",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "antd": "^5.5.1",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "crypto": "^1.0.1",
+    "express": "^4.18.2",
     "framer-motion": "^10.12.14",
+    "fs": "^0.0.1-security",
+    "nodemailer": "^6.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "stream": "^0.0.2",
     "svg-parser": "^2.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
+  },
+  "browser": {
+    "crypto": false
   },
   "scripts": {
     "start": "react-scripts start",
