--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-email": "1.9.4",
     "react-icons": "^4.8.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
